fix event image CSS for cover, add title cutoff, CSS updates

--- a/black-box/src/css/index.css
+++ b/black-box/src/css/index.css
@@ -130,6 +130,15 @@ html,
 body {
   font-size: 62.5%;
 }
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
 * {
   box-sizing: border-box;
 }
@@ -197,9 +206,8 @@ input:focus {
   font-size: 5rem;
   color: transparent;
 }
-i.search-btn {
+.search-btn {
   background: #0472c2;
-  border-right: 2px solid #cacaca;
   height: 100%;
   width: 70px;
   display: flex;
@@ -208,11 +216,11 @@ i.search-btn {
   justify-content: space-around;
   cursor: pointer;
 }
-i.search-btn:active {
+.search-btn:active {
   opacity: 0.7;
   color: #3e3e3e;
 }
-i.search-btn:before {
+.search-btn:before {
   font-size: 2.3rem;
   color: #fff;
 }
@@ -273,7 +281,7 @@ header h1:first-of-type {
   transform: skewX(10deg) rotate(0deg);
 }
 .search-cont {
-  width: 50%;
+  width: 35%;
   border: 2px solid #cacaca;
   margin: 0 auto;
 }
@@ -281,17 +289,19 @@ header h1:first-of-type {
   z-index: 1;
   background-color: #fff;
   height: 45px;
-  padding-right: 25px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+}
+.search-bar form {
+  width: 100%;
 }
 .search-bar input {
   height: 100%;
   width: 100%;
   font-size: 2.3rem;
   font-family: 'Roboto', 'Tahoma', sans-serif;
-  margin-left: 10px;
+  padding-left: 10px;
 }
 .results {
   display: flex;
@@ -313,17 +323,13 @@ header h1:first-of-type {
   flex-flow: row nowrap;
   background: #f7f7f7;
   margin-bottom: 30px;
-}
-.resStuff img:hover {
-  opacity: 0.7;
-  filter: opacity(0.7);
+  height: 200px;
 }
 .resStuff a.event-img {
-  width: 50%;
-  height: 186px;
-  background-size: cover;
+  width: 100%;
   background-position: center;
-  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
 }
 .result {
   width: 50%;
@@ -351,7 +357,7 @@ header h1:first-of-type {
 .resDetails h3 a {
   font-weight: 700;
   text-decoration: none;
-  font-size: 2.25rem;
+  font-size: 1.75rem;
 }
 .ticket-price {
   color: #000;
